--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <input type="text" name="firstField" id="firstInput">
                 <input type="text" name="secondField" id="secondInput">
             </div>
-        </form>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
